add text validation + deleted unnecessary html blocks